--- a/RVFS/catalog/templates/edit_service.html
+++ b/RVFS/catalog/templates/edit_service.html
@@ -5,6 +5,7 @@
 {% block body %}
 <h2>Edit a Service</h2>
     <form class="prod-form" method="post">
+        {% csrf_token %}
         <div class="row">
         {% for field in form %}
             {% if forloop.counter == 1 %}
